--- a/licode/server-api.html
+++ b/licode/server-api.html
@@ -172,7 +172,7 @@ N.API.deleteRoom(roomId, function(result) {
 
           <ul>
             <li><code>Name</code>: a name that identify the participant.</li>
-            <li><code>Role</code>: roles are not defined yet. We will update this soon.</li>
+            <li><code>Role</code>: indicates de permissions that the user will have in the room. To learn how to manage roles and permmisions you can visit this <a href="http://lynckia.com/licode/roles.html">post</a></li>
           </ul>
 
           <h3>Create Token</h3>
@@ -202,7 +202,7 @@ N.API.createToken(roomId, name, role, function(token) {
           <p>A User object has the following properties:</p>
           <ul>
             <li><code>User.name</code>: the name specified when you created the token.</li>
-            <li><code>User.role</code>: the role specified when you created the token. Roles are not defined yet. We will update this soon.</li>
+            <li><code>User.role</code>: the role specified when you created the token.</li>
           </ul>
           <p>You can ask Nuve for a list of the users connected to a determined room.</p>
 
