Updated server api

--- a/licode/server-api.html
+++ b/licode/server-api.html
@@ -172,7 +172,7 @@ N.API.deleteRoom(roomId, function(result) {
 
           <ul>
             <li><code>Name</code>: a name that identify the participant.</li>
-            <li><code>Role</code>: indicates de permissions that the user will have in the room. To learn more about how to manage roles and permmisions you can visit this <a href="http://lynckia.com/licode/roles.html">post</a></li>
+            <li><code>Role</code>: indicates de permissions that the user will have in the room. To learn more about how to manage roles and permmisions you can visit this <a href="http://lynckia.com/licode/roles.html">post</a></li>.
           </ul>
 
           <h3>Create Token</h3>
