removed Christmas theme

--- a/licode/index.html
+++ b/licode/index.html
@@ -4,11 +4,11 @@ title: Licode
 home: true
 ---
 
-<div class="jumbotron masthead christmas">
+<div class="jumbotron masthead">
 <!--<div class="jumbotron masthead christmas">-->
   <div class="container">
     <!--<img src="assets/img/star.svg" alt="Licode" class="hidden-phone hidden-tablet star">-->
-    <img src="assets/img/star-christmas.png" alt="Licode" class="hidden-phone hidden-tablet star">
+    <!--<img src="assets/img/star-christmas.png" alt="Licode" class="hidden-phone hidden-tablet star">-->
     <img src="assets/img/licode.svg" alt="Licode">
     <p>Open Source WebRTC Communications Platform.</p>
     <p><a href="./install.html" class="btn btn-primary btn-large hidden-phone hidden-tablet">Start Using it!</a></p>
