--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                         
                     </div>
                     <div class="row">
-                        <div class="span6 team">
+                        <!--<div class="span6 team">
                             <img src="images/team/001.jpg" title=" " alt=" "/>
                             <div class="clear"></div>
                             <div class="sub_heading">Javier Cerviño</div>
@@ -200,7 +200,7 @@
                                 <a href="http://www.linkedin.com/profile/view?id=36508164" target="_blank" target=data-placement="top" data-original-title="LINKEDIN">i</a>
                                 <a href="http://twitter.com/jcague" target="_blank" data-placement="top" data-original-title="TWITTER">l</a>
                             </div>
-                        </div>
+                        </div>-->
                         <div class="span6 team">
                             <img src="images/team/002.jpg" title=" " alt=" "/>
                             <div class="clear"></div>
@@ -215,15 +215,12 @@
                                 <a href="http://twitter.com/lodoyun" target="_blank" data-placement="top" data-original-title="TWITTER">l</a>
                             </div>
                         </div>
-                    </div>
-                    <div class="horizontal_seperator"></div>
-                    <div class="row">
                         <div class="span6 team">
                             <img src="images/team/003.jpg" title=" " alt=" "/>
                             <div class="clear"></div>
                             <div class="sub_heading">Álvaro Alonso</div>
                             <div class="clear"></div>
-                            <h4>BackEnd Developer</h4>
+                            <h4>FrontEnd Developer</h4>
                             <div class="clear"></div>
                             <p></p>
                             <div class="single_break"></div>
@@ -232,7 +229,10 @@
                                 <a href="http://twitter.com/larsonalonso" target="_blank" data-placement="top" data-original-title="TWITTER">l</a>
                             </div>
                         </div>
-                        <div class="span6 team">
+                    </div>
+                    <div class="horizontal_seperator"></div>
+                    <div class="row">
+                        <div class="span12 team">
                             <img src="images/team/004.jpg" title=" " alt=" "/>
                             <div class="clear"></div>
                             <div class="sub_heading">Joaquín Salvachúa</div>
