Correct link to client API

--- a/licode/server-api.html
+++ b/licode/server-api.html
@@ -378,8 +378,8 @@ app.listen (80);</pre>
           <div class="page-header">
             <h1>What next?</h1>
           </div>
-          <p class="lead">Head to the Server API for information, examples, and code snippets of the additional API to manage rooms, and give access to users, or start testing this API.</p>
-          <a class="btn btn-large btn-primary" href="./server-api.html">Visit the Server API</a>
+          <p class="lead">Head to the Client API for information, examples, and code snippets of the additional API to handle connections to rooms and streams in your web applications, or start testing this API.</p>
+          <a class="btn btn-large btn-primary" href="./client-api.html">Visit the Client API</a>
           <a class="btn btn-large" href="http://chotis2.dit.upm.es" style="margin-left: 5px;">Try it!</a>
         </section>
 
