Remove socket.io bundling in erizo.js client js
Adding as external dep, let client decide how to load socket.io (requirejs, etc)

--- a/extras/basic_example/public/connection_test.html
+++ b/extras/basic_example/public/connection_test.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Licode Basic Example</title>
+    <script type="text/javascript" src="socket.io.js"></script>
     <script type="text/javascript" src="erizo.js"></script>
     <script type="text/javascript" src="connection_test.js"></script>
   </head>
