--- a/extras/basic_example/public/index.html
+++ b/extras/basic_example/public/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Licode Basic Example</title>
+    <script type="text/javascript" src="socket.io.js"></script>
     <script type="text/javascript" src="erizo.js"></script>
     <script type="text/javascript" src="script.js"></script>
   </head>
