Maintenance in demos

--- a/licode/try.html
+++ b/licode/try.html
@@ -27,30 +27,8 @@ try: true
           <div class="page-header">
             <h1>Multi-Videoconference</h1>
           </div>
-          <p class="lead">Here you can try an application with four videoconference rooms.</p>
-
-          <div class="row-fluid">
-            
-            <div class="span6">
-              <p><a class="btn btn-large btn-primary" href="http://chotis2.dit.upm.es">Try it!</a></p>
-            </div>
-          </div>
+          <p class="lead">Our demo server is under maintenance process. It will be available again bery soon...</p>
         </section>
-
-
-        <!-- Next
-        ================================================== -->
-        <section id="what-next">
-          <div class="page-header">
-            <h1>Do you like it?</h1>
-          </div>
-          <p class="lead">If you like Licode and want to include it in your web site, go on! It's so easy!</p>
-          <a class="btn btn-large btn-primary" href="./install.html">Get Started</a>
-          
-        </section>
-
-
-
 
       </div>
     </div>
