--- a/licode/try.html
+++ b/licode/try.html
@@ -26,7 +26,7 @@ try: true
         <section id="download-bootstrap">
           <div class="page-header">
           </div>
-          <p class="lead">Our demo server is under maintenance process. It will be available again very soon...</p>
+          <p class="lead">Our demo server is under maintenance process. It will be available again bery soon...</p>
         </section>
 
       </div>
