--- a/licode/install.html
+++ b/licode/install.html
@@ -41,13 +41,19 @@ install: true
           <div class="row-fluid marketing">
             <div class="span6">
               <img width="100px" src="assets/img/ubuntu.png"></img>
-              <h3>Ubuntu 12.04 LTS</h3>
+              <h3>Ubuntu 12.04 LTS or 14.04 LTS</h3>
               <p>Our recommendation is to install it in a clean installation.</p>
             </div>
             <div class="span6">
               <img width="80px" src="assets/img/apple.gif"></img>
               <h3>Mac OS X</h3>
-              <p>It has been tested with Mountain Lion.</p>
+              <p>It has been tested with OSX 10.11 - El Capitan</p>
+              <p>You will need: </p>
+              <ul>
+              <li>Xcode Command Line Tools</li>
+              <li>Node v0.10.X, we recommend using <a href=https://github.com/creationix/nvm">nvm</a> for your node versioning problems</li>
+              <li>Git</li>
+              </ul>
             </div>
             
          </div>
@@ -62,7 +68,6 @@ install: true
           <p class="lead">You first need to clone our code from github.</p>
           <p>You need to have git installed in your computer.</p>
           <p>In ubuntu use "sudo apt-get install git".</p>
-          <p>In Mac OS X you need to have installed Xcode Command Line Tools. Also you can install git with homebrew.</p>
           <div class="bs-docs-example">
           Now clone the repository.  
           </div>
@@ -81,7 +86,7 @@ git clone https://github.com/ging/licode.git
           <p class="lead">Now you need to install some dependencies to use Licode.</p>
             <p>This step depends on the type of Operating System your are using.</p>
             <div class="bs-docs-example">
-            Ubuntu 12.04 LTS.
+            Ubuntu LTS.
             </div>
 <pre class="prettyprint linenums">
 ./licode/scripts/installUbuntuDeps.sh
@@ -131,7 +136,7 @@ git clone https://github.com/ging/licode.git
         ================================================== -->
         <section id="test">
           <div class="page-header">
-            <h1>8. Test Licode!<h1>
+            <h1>6. Test Licode!<h1>
           </div>
           <p class="lead"> At this time you have already installed in your computer Licode and a basic videoconference example to test it. Let's run them.</p>
           <div class="bs-docs-example">
