Removed Mountain Lion reference

--- a/licode/install.html
+++ b/licode/install.html
@@ -93,7 +93,7 @@ git clone https://github.com/ging/licode.git
 </pre>
 
         <div class="bs-docs-example">
-            Mac OS X Mountain Lion.
+            Mac OS X.
             </div>
 <pre class="prettyprint linenums">
 ./licode/scripts/installMacDeps.sh
