New team member

--- a/index.html
+++ b/index.html
@@ -187,20 +187,6 @@
                         
                     </div>
                     <div class="row">
-                        <!--<div class="span6 team">
-                            <img src="images/team/001.jpg" title=" " alt=" "/>
-                            <div class="clear"></div>
-                            <div class="sub_heading">Javier Cerviño</div>
-                            <div class="clear"></div>
-                            <h4>FrontEnd Developer</h4>
-                            <div class="clear"></div>
-                            <p></p>
-                             <div class="single_break"></div>
-                             <div class="social-icons2">
-                                <a href="http://www.linkedin.com/profile/view?id=36508164" target="_blank" target=data-placement="top" data-original-title="LINKEDIN">i</a>
-                                <a href="http://twitter.com/jcague" target="_blank" data-placement="top" data-original-title="TWITTER">l</a>
-                            </div>
-                        </div>-->
                         <div class="span6 team">
                             <img src="images/team/002.jpg" title=" " alt=" "/>
                             <div class="clear"></div>
@@ -220,7 +206,7 @@
                             <div class="clear"></div>
                             <div class="sub_heading">Álvaro Alonso</div>
                             <div class="clear"></div>
-                            <h4>FrontEnd Developer</h4>
+                            <h4>BackEnd Developer</h4>
                             <div class="clear"></div>
                             <p></p>
                             <div class="single_break"></div>
@@ -244,6 +230,20 @@
                             <div class="social-icons2">
                                 <a href="http://www.linkedin.com/profile/view?id=5040359" target="_blank" data-placement="top" data-original-title="LINKEDIN">i</a>
                                 <a href="http://twitter.com/jsalvachua" target="_blank" data-placement="top" data-original-title="TWITTER">l</a>
+                            </div>
+                        </div>
+                        <div class="span6 team">
+                            <img src="images/team/005.jpg" title=" " alt=" "/>
+                            <div class="clear"></div>
+                            <div class="sub_heading">Ignacio Aguado</div>
+                            <div class="clear"></div>
+                            <h4>FrontEnd Developer</h4>
+                            <div class="clear"></div>
+                            <p></p>
+                             <div class="single_break"></div>
+                             <div class="social-icons2">
+                                <a href="https://www.linkedin.com/in/nachoaguadoc" target="_blank" target=data-placement="top" data-original-title="LINKEDIN">i</a>
+                                <a href="http://twitter.com/nachscratchit" target="_blank" data-placement="top" data-original-title="TWITTER">l</a>
                             </div>
                         </div>
                     </div>
